ecmascript/parser/tests/test262-error-references/fail/842c5cb4a70228de.js.stderr
error: Unexpected token
 --> $DIR/tests/test262-parser/fail/842c5cb4a70228de.js:1:7
  |
1 | new f(..g);
  |       ^

